refactor: all controller tests